# heart-attack-predictor

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  demo.py  main.py  pyproject.toml  ruff.toml  setup.py
.github/workflows/: aws.yaml
config/: schema.yaml
configs/: train.yaml
configs/paths/: default.yaml
notebooks/: 00_mongo_db_setup.ipynb  01_exploratory_data_analysis.ipynb  02_model_exploration_training.ipynb  02_model_exploration_training2.ipynb  mongo_db_setup.ipynb
readme_assets/: app-demo.webm
scripts/: video-to-giff.sh
src/cloud_storage/: aws_storage.py
src/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_pusher.py  model_trainer.py
src/configuration/: aws_connection.py  mongo_db_connection.py
src/constants/: __init__.py
src/data_access/: proj1_data.py
src/entity/: artifact_entity.py  config_entity.py  estimator.py  s3_estimator.py
src/exception/: __init__.py
src/logger/: __init__.py
src/pipline/: prediction_pipeline.py  training_pipeline.py
src/ui/: ui.py
src/utils/: main_utils.py  visualization.py
ui/: api_model.py  ui.py
