[project]
name = "heart-attack-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dvc>=3.59.1",
    "pre-commit>=4.2.0",
    "pyrootutils>=1.0.4",
    "xgboost>=3.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
