[project]
name = "heart-attack-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyrootutils>=1.0.4",
    "xgboost>=3.0.0",
    "boto3>=1.38.6",
    "botocore>=1.38.6",
    "certifi>=2025.4.26",
    "dill>=0.4.0",
    "fastapi>=0.115.12",
    "from-root>=1.3.0",
    "imblearn>=0.0",
    "ipykernel>=6.29.5",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.1",
    "mypy-boto3-s3>=1.38.0",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pymongo>=4.12.1",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.1",
    "uvicorn>=0.34.2",

]

[dependency-groups]
dev = [
    "seaborn>=0.13.2",
    "heart-attack-predictor",
    "optuna>=4.3.0",
    "pre-commit>=4.2.0",
    "mlflow>=2.22.0",
]

[tool.uv.sources]
heart-attack-predictor = { workspace = true }
